--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "web-scarping-basic",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "node app.js"
@@ -11,8 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.2.2",
+    "chalk": "^5.2.0",
     "cheerio": "^1.0.0-rc.12",
+    "cli-spinners": "^2.7.0",
     "express": "^4.18.2",
+    "ora": "^6.1.2",
     "puppeteer": "^19.5.2"
   }
 }
